fixed claendar problem

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Jeremy the Dingus</title>
+    <title>Schedgy</title>
   </head>
 
   <body>
